--- a/src/.env.example
+++ b/src/.env.example
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=mongodb
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
@@ -50,3 +50,13 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+# MongoDb
+MONGO_CONNECTION=mongodb
+MONGO_HOST=inosoft_mongo
+MONGO_PORT=27017
+MONGO_AUTH_DATABASE=admin
+MONGO_DATABASE=inosoft
+MONGO_USERNAME=root
+MONGO_PASSWORD=ROOT
