--- a/src/composer.json
+++ b/src/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "jenssegers/mongodb": "3.8",
         "laravel/framework": "^8.75",
+        "laravel/passport": "v10.4.1",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5"
     },
